src/test/ui/parser/issue-8537.stderr
error[E0703]: invalid ABI: found `invalid-ab_isize`
  --> $DIR/issue-8537.rs:2:3
   |
LL |   "invalid-ab_isize"
   |   ^^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = help: valid ABIs: Rust, C, C-unwind, cdecl, stdcall, stdcall-unwind, fastcall, vectorcall, thiscall, thiscall-unwind, aapcs, win64, sysv64, ptx-kernel, msp430-interrupt, x86-interrupt, amdgpu-kernel, efiapi, avr-interrupt, avr-non-blocking-interrupt, C-cmse-nonsecure-call, wasm, system, system-unwind, rust-intrinsic, rust-call, platform-intrinsic, unadjusted

error: aborting due to previous error

For more information about this error, try `rustc --explain E0703`.
